logs_student/vector_modifiers/assign.log
In file included from main/vector_modifiers//assign.cpp:13:
In file included from main/vector_modifiers/../main.hpp:22:
In file included from main/vector_modifiers/../../.././stack/stack.hpp:14:
main/vector_modifiers/../../.././stack/vector.hpp:157:27: error: indirection requires pointer operand ('int' invalid)
                push_back(*first++);
                          ^~~~~~~~
main/vector_modifiers//assign.cpp:35:8: note: in instantiation of function template specialization 'ft::vector<int>::assign<int>' requested here
    s3.assign(3, 1);
       ^
1 error generated.
